tests/ui/type-alias-impl-trait/issue-60564.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/issue-60564.rs:20:9
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                         - this generic parameter of the opaque must be used with a generic type parameter
...
LL |         (0u8..n).rev().map(move |shift| ((self >> T::from(shift)) & T::from(1)).try_into().unwrap())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected generic type parameter, found `u8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
